--- a/src/app/views/mi-cuenta/mi-cuenta.component.html
+++ b/src/app/views/mi-cuenta/mi-cuenta.component.html
@@ -41,6 +41,10 @@
       <ion-icon name="pricetags-outline" slot="start"></ion-icon>
       <ion-label>Mis Productos</ion-label>
     </ion-item>
+    <ion-item button (click)="navigateTo('mis-servicios')">
+      <ion-icon name="construct-outline" slot="start"></ion-icon>
+      <ion-label>Mis Servicios</ion-label>
+    </ion-item>
     <ion-item button>
       <ion-icon name="chatbubbles-outline" slot="start"></ion-icon>
       <ion-label>Preguntas</ion-label>
