--- a/src/app/views/detalle/detalle.component.scss
+++ b/src/app/views/detalle/detalle.component.scss
@@ -1,4 +1,30 @@
 
+@media screen and (max-width: 768px) {
+ .floating-location {
+  position: fixed;
+  bottom: 564px;
+  background-color: #4a008e;
+  padding: 8px 12px;
+  border-radius: 20px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #fff;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+}
+}
+
+
+
+
+
+
+
+
+
+
   .search-bar {
     background-color: #fff;
     border-radius: 8px;
