--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
       </div>
       <ion-icon name="cart-outline" class="icon-cart" (click)="navigateTo('carrito')"></ion-icon>
     </div>
-    <!-- <p class="address-text" (click)="navigateTo('login')" *ngIf="!isLoggedIn">Login de prueba</p> -->
+    <p class="address-text" (click)="navigateTo('login')" *ngIf="!isLoggedIn">Login de prueba</p>
     <p class="location-info" *ngIf="isLoggedIn">
       <ion-icon name="location-outline" style="margin-right: 8px;"></ion-icon>
       {{ location }}
