--- a/src/app/views/mi-cuenta/mi-cuenta.component.html
+++ b/src/app/views/mi-cuenta/mi-cuenta.component.html
@@ -86,7 +86,7 @@
       <ion-icon name="help-circle-outline" slot="start"></ion-icon>
       <ion-label>Ayuda</ion-label>
     </ion-item>
-    <ion-item button>
+    <ion-item button (click)="logout()">
       <ion-icon name="log-out-outline" slot="start"></ion-icon>
       <ion-label>Cerrar Sesión</ion-label>
     </ion-item>
