--- a/src/app/views/tienda/tienda.component.html
+++ b/src/app/views/tienda/tienda.component.html
@@ -7,13 +7,12 @@
       </div>
       <ion-icon name="cart-outline" class="icon-cart" (click)="navigateTo('carrito')"></ion-icon>
     </div>
-  <p class="address-text" (click)="navigateTo('login')" *ngIf="!isLoggedIn">Login de prueba</p>
-  <!-- Mostrar ubicación flotante más abajo -->
+    <p class="address-text" (click)="navigateTo('login')" *ngIf="!isLoggedIn">Login de prueba</p>
+    <p class="location-info" *ngIf="isLoggedIn">
+      <ion-icon name="location-outline" style="margin-right: 8px;"></ion-icon>
+      {{ location }}
+    </p>
   </ion-toolbar>
- <p class="floating-location" *ngIf="isLoggedIn">
-    <ion-icon name="location-outline" style="margin-right: 8px;"></ion-icon>
-    {{ location }}
-  </p>
 </ion-header>
 
 <ion-content>
